src-liberty_parse-2.6/syntax_parser.output
Grammar

    0 $accept: file $end

    1 file: group

    2 $@1: ε

    3 group: head LCURLY $@1 statements RCURLY

    4 $@2: ε

    5 group: head LCURLY $@2 RCURLY

    6 statements: statement
    7           | statements statement

    8 statement: simple_attr
    9          | complex_attr
   10          | group

   11 simple_attr: IDENT COLON KW_VIRTATTR SEMI
   12            | IDENT COLON KW_STRING SEMI
   13            | IDENT COLON KW_STRING string_enum SEMI
   14            | IDENT COLON KW_FLOAT float_constraint SEMI
   15            | IDENT COLON KW_FLOAT SEMI
   16            | IDENT COLON KW_ENUM string_enum SEMI
   17            | IDENT COLON KW_SHORT SEMI
   18            | IDENT COLON KW_SHORT int_constraint SEMI
   19            | IDENT COLON KW_INTEGER SEMI
   20            | IDENT COLON KW_INTEGER int_constraint SEMI
   21            | IDENT COLON KW_BOOLEAN SEMI

   22 string_enum: LPAR s_or_i_list RPAR

   23 s_or_i_list: s_or_i
   24            | s_or_i_list COMMA s_or_i
   25            | s_or_i_list COMMA KW_OR s_or_i

   26 float_constraint: LPAR GREATERTHAN NUM RPAR
   27                 | LPAR LESSTHAN NUM RPAR
   28                 | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR
   29                 | COLONEQ NUM
   30                 | LPAR GREATERTHAN NUM RPAR COLONEQ NUM
   31                 | LPAR LESSTHAN NUM RPAR COLONEQ NUM
   32                 | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR COLONEQ NUM
   33                 | COLONEQ s_or_i
   34                 | LPAR GREATERTHAN NUM RPAR COLONEQ s_or_i
   35                 | LPAR LESSTHAN NUM RPAR COLONEQ s_or_i
   36                 | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR COLONEQ s_or_i

   37 int_constraint: LPAR GREATERTHAN NUM RPAR
   38               | LPAR LESSTHAN NUM RPAR
   39               | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR
   40               | COLONEQ NUM
   41               | LPAR GREATERTHAN NUM RPAR COLONEQ NUM
   42               | LPAR LESSTHAN NUM RPAR COLONEQ NUM
   43               | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR COLONEQ NUM
   44               | COLONEQ s_or_i
   45               | LPAR GREATERTHAN NUM RPAR COLONEQ s_or_i
   46               | LPAR LESSTHAN NUM RPAR COLONEQ s_or_i
   47               | LPAR GREATERTHAN NUM KW_AND LESSTHAN NUM RPAR COLONEQ s_or_i

   48 complex_attr: head SEMI

   49 head: IDENT LPAR arg_or_namelist RPAR
   50     | KW_SHORT LPAR arg_or_namelist RPAR

   51 arg_or_namelist: namelist
   52                | arglist

   53 namelist: ε
   54         | IDENT
   55         | LBRACK IDENT RBRACK
   56         | IDENT LBRACK COMMA DOTS COMMA IDENT RBRACK
   57         | IDENT COMMA IDENT
   58         | IDENT COMMA IDENT COMMA IDENT

   59 arglist: KW_STRING
   60        | KW_INTEGER
   61        | KW_FLOAT
   62        | KW_UNK_ARGS
   63        | KW_LIST
   64        | arglist COMMA KW_STRING
   65        | arglist COMMA KW_INTEGER
   66        | arglist COMMA KW_FLOAT
   67        | arglist COMMA KW_LIST

   68 s_or_i: STRING
   69       | IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMA (258) 24 25 56 57 58 64 65 66 67
    SEMI (259) 11 12 13 14 15 16 17 18 19 20 21 48
    LPAR (260) 22 26 27 28 30 31 32 34 35 36 37 38 39 41 42 43 45 46 47 49 50
    RPAR (261) 22 26 27 28 30 31 32 34 35 36 37 38 39 41 42 43 45 46 47 49 50
    LCURLY (262) 3 5
    RCURLY (263) 3 5
    COLON (264) 11 12 13 14 15 16 17 18 19 20 21
    LBRACK (265) 55 56
    RBRACK (266) 55 56
    KW_FLOAT (267) 14 15 61 66
    KW_STRING (268) 12 13 59 64
    KW_ENUM (269) 16
    KW_UNK_ARGS (270) 62
    KW_INTEGER (271) 19 20 60 65
    KW_VIRTATTR (272) 11
    KW_SHORT (273) 17 18 50
    KW_OR (274) 25
    KW_AND (275) 28 32 36 39 43 47
    KW_BOOLEAN (276) 21
    COLONEQ (277) 29 30 31 32 33 34 35 36 40 41 42 43 44 45 46 47
    KW_LIST (278) 63 67
    GREATERTHAN (279) 26 28 30 32 34 36 37 39 41 43 45 47
    LESSTHAN (280) 27 28 31 32 35 36 38 39 42 43 46 47
    DOTS (281) 56
    NUM <num> (282) 26 27 28 29 30 31 32 34 35 36 37 38 39 40 41 42 43 45 46 47
    STRING <str> (283) 68
    IDENT <str> (284) 11 12 13 14 15 16 17 18 19 20 21 49 54 55 56 57 58 69


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    file <tech> (31)
        on left: 1
        on right: 0
    group <group> (32)
        on left: 3 5
        on right: 1 10
    $@1 (33)
        on left: 2
        on right: 3
    $@2 (34)
        on left: 4
        on right: 5
    statements (35)
        on left: 6 7
        on right: 3 7
    statement (36)
        on left: 8 9 10
        on right: 6 7
    simple_attr <attr> (37)
        on left: 11 12 13 14 15 16 17 18 19 20 21
        on right: 8
    string_enum <str_enum> (38)
        on left: 22
        on right: 13 16
    s_or_i_list (39)
        on left: 23 24 25
        on right: 22 24 25
    float_constraint <float_constr> (40)
        on left: 26 27 28 29 30 31 32 33 34 35 36
        on right: 14
    int_constraint <int_constr> (41)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 18 20
    complex_attr <attr> (42)
        on left: 48
        on right: 9
    head <head> (43)
        on left: 49 50
        on right: 3 5 48
    arg_or_namelist <head> (44)
        on left: 51 52
        on right: 49 50
    namelist <nameconstr> (45)
        on left: 53 54 55 56 57 58
        on right: 51
    arglist <arg> (46)
        on left: 59 60 61 62 63 64 65 66 67
        on right: 52 64 65 66 67
    s_or_i <str> (47)
        on left: 68 69
        on right: 23 24 25 33 34 35 36 44 45 46 47


State 0

    0 $accept: • file $end

    KW_SHORT  shift, and go to state 1
    IDENT     shift, and go to state 2

    file   go to state 3
    group  go to state 4
    head   go to state 5


State 1

   50 head: KW_SHORT • LPAR arg_or_namelist RPAR

    LPAR  shift, and go to state 6


State 2

   49 head: IDENT • LPAR arg_or_namelist RPAR

    LPAR  shift, and go to state 7


State 3

    0 $accept: file • $end

    $end  shift, and go to state 8


State 4

    1 file: group •

    $default  reduce using rule 1 (file)


State 5

    3 group: head • LCURLY $@1 statements RCURLY
    5      | head • LCURLY $@2 RCURLY

    LCURLY  shift, and go to state 9


State 6

   50 head: KW_SHORT LPAR • arg_or_namelist RPAR

    LBRACK       shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_STRING    shift, and go to state 12
    KW_UNK_ARGS  shift, and go to state 13
    KW_INTEGER   shift, and go to state 14
    KW_LIST      shift, and go to state 15
    IDENT        shift, and go to state 16

    $default  reduce using rule 53 (namelist)

    arg_or_namelist  go to state 17
    namelist         go to state 18
    arglist          go to state 19


State 7

   49 head: IDENT LPAR • arg_or_namelist RPAR

    LBRACK       shift, and go to state 10
    KW_FLOAT     shift, and go to state 11
    KW_STRING    shift, and go to state 12
    KW_UNK_ARGS  shift, and go to state 13
    KW_INTEGER   shift, and go to state 14
    KW_LIST      shift, and go to state 15
    IDENT        shift, and go to state 16

    $default  reduce using rule 53 (namelist)

    arg_or_namelist  go to state 20
    namelist         go to state 18
    arglist          go to state 19


State 8

    0 $accept: file $end •

    $default  accept


State 9

    3 group: head LCURLY • $@1 statements RCURLY
    5      | head LCURLY • $@2 RCURLY

    RCURLY    reduce using rule 4 ($@2)
    $default  reduce using rule 2 ($@1)

    $@1  go to state 21
    $@2  go to state 22


State 10

   55 namelist: LBRACK • IDENT RBRACK

    IDENT  shift, and go to state 23


State 11

   61 arglist: KW_FLOAT •

    $default  reduce using rule 61 (arglist)


State 12

   59 arglist: KW_STRING •

    $default  reduce using rule 59 (arglist)


State 13

   62 arglist: KW_UNK_ARGS •

    $default  reduce using rule 62 (arglist)


State 14

   60 arglist: KW_INTEGER •

    $default  reduce using rule 60 (arglist)


State 15

   63 arglist: KW_LIST •

    $default  reduce using rule 63 (arglist)


State 16

   54 namelist: IDENT •
   56         | IDENT • LBRACK COMMA DOTS COMMA IDENT RBRACK
   57         | IDENT • COMMA IDENT
   58         | IDENT • COMMA IDENT COMMA IDENT

    COMMA   shift, and go to state 24
    LBRACK  shift, and go to state 25

    $default  reduce using rule 54 (namelist)


State 17

   50 head: KW_SHORT LPAR arg_or_namelist • RPAR

    RPAR  shift, and go to state 26


State 18

   51 arg_or_namelist: namelist •

    $default  reduce using rule 51 (arg_or_namelist)


State 19

   52 arg_or_namelist: arglist •
   64 arglist: arglist • COMMA KW_STRING
   65        | arglist • COMMA KW_INTEGER
   66        | arglist • COMMA KW_FLOAT
   67        | arglist • COMMA KW_LIST

    COMMA  shift, and go to state 27

    $default  reduce using rule 52 (arg_or_namelist)


State 20

   49 head: IDENT LPAR arg_or_namelist • RPAR

    RPAR  shift, and go to state 28


State 21

    3 group: head LCURLY $@1 • statements RCURLY

    KW_SHORT  shift, and go to state 1
    IDENT     shift, and go to state 29

    group         go to state 30
    statements    go to state 31
    statement     go to state 32
    simple_attr   go to state 33
    complex_attr  go to state 34
    head          go to state 35


State 22

    5 group: head LCURLY $@2 • RCURLY

    RCURLY  shift, and go to state 36


State 23

   55 namelist: LBRACK IDENT • RBRACK

    RBRACK  shift, and go to state 37


State 24

   57 namelist: IDENT COMMA • IDENT
   58         | IDENT COMMA • IDENT COMMA IDENT

    IDENT  shift, and go to state 38


State 25

   56 namelist: IDENT LBRACK • COMMA DOTS COMMA IDENT RBRACK

    COMMA  shift, and go to state 39


State 26

   50 head: KW_SHORT LPAR arg_or_namelist RPAR •

    $default  reduce using rule 50 (head)


State 27

   64 arglist: arglist COMMA • KW_STRING
   65        | arglist COMMA • KW_INTEGER
   66        | arglist COMMA • KW_FLOAT
   67        | arglist COMMA • KW_LIST

    KW_FLOAT    shift, and go to state 40
    KW_STRING   shift, and go to state 41
    KW_INTEGER  shift, and go to state 42
    KW_LIST     shift, and go to state 43


State 28

   49 head: IDENT LPAR arg_or_namelist RPAR •

    $default  reduce using rule 49 (head)


State 29

   11 simple_attr: IDENT • COLON KW_VIRTATTR SEMI
   12            | IDENT • COLON KW_STRING SEMI
   13            | IDENT • COLON KW_STRING string_enum SEMI
   14            | IDENT • COLON KW_FLOAT float_constraint SEMI
   15            | IDENT • COLON KW_FLOAT SEMI
   16            | IDENT • COLON KW_ENUM string_enum SEMI
   17            | IDENT • COLON KW_SHORT SEMI
   18            | IDENT • COLON KW_SHORT int_constraint SEMI
   19            | IDENT • COLON KW_INTEGER SEMI
   20            | IDENT • COLON KW_INTEGER int_constraint SEMI
   21            | IDENT • COLON KW_BOOLEAN SEMI
   49 head: IDENT • LPAR arg_or_namelist RPAR

    LPAR   shift, and go to state 7
    COLON  shift, and go to state 44


State 30

   10 statement: group •

    $default  reduce using rule 10 (statement)


State 31

    3 group: head LCURLY $@1 statements • RCURLY
    7 statements: statements • statement

    RCURLY    shift, and go to state 45
    KW_SHORT  shift, and go to state 1
    IDENT     shift, and go to state 29

    group         go to state 30
    statement     go to state 46
    simple_attr   go to state 33
    complex_attr  go to state 34
    head          go to state 35


State 32

    6 statements: statement •

    $default  reduce using rule 6 (statements)


State 33

    8 statement: simple_attr •

    $default  reduce using rule 8 (statement)


State 34

    9 statement: complex_attr •

    $default  reduce using rule 9 (statement)


State 35

    3 group: head • LCURLY $@1 statements RCURLY
    5      | head • LCURLY $@2 RCURLY
   48 complex_attr: head • SEMI

    SEMI    shift, and go to state 47
    LCURLY  shift, and go to state 9


State 36

    5 group: head LCURLY $@2 RCURLY •

    $default  reduce using rule 5 (group)


State 37

   55 namelist: LBRACK IDENT RBRACK •

    $default  reduce using rule 55 (namelist)


State 38

   57 namelist: IDENT COMMA IDENT •
   58         | IDENT COMMA IDENT • COMMA IDENT

    COMMA  shift, and go to state 48

    $default  reduce using rule 57 (namelist)


State 39

   56 namelist: IDENT LBRACK COMMA • DOTS COMMA IDENT RBRACK

    DOTS  shift, and go to state 49


State 40

   66 arglist: arglist COMMA KW_FLOAT •

    $default  reduce using rule 66 (arglist)


State 41

   64 arglist: arglist COMMA KW_STRING •

    $default  reduce using rule 64 (arglist)


State 42

   65 arglist: arglist COMMA KW_INTEGER •

    $default  reduce using rule 65 (arglist)


State 43

   67 arglist: arglist COMMA KW_LIST •

    $default  reduce using rule 67 (arglist)


State 44

   11 simple_attr: IDENT COLON • KW_VIRTATTR SEMI
   12            | IDENT COLON • KW_STRING SEMI
   13            | IDENT COLON • KW_STRING string_enum SEMI
   14            | IDENT COLON • KW_FLOAT float_constraint SEMI
   15            | IDENT COLON • KW_FLOAT SEMI
   16            | IDENT COLON • KW_ENUM string_enum SEMI
   17            | IDENT COLON • KW_SHORT SEMI
   18            | IDENT COLON • KW_SHORT int_constraint SEMI
   19            | IDENT COLON • KW_INTEGER SEMI
   20            | IDENT COLON • KW_INTEGER int_constraint SEMI
   21            | IDENT COLON • KW_BOOLEAN SEMI
